[package]
name = "proxy-address-blocker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.27", features = ["persistence"] }
egui_extras = { version = "0.27", features = ["svg", "image"] }
hyper = { version = "1.3", features = ["full"] }
image = { version = "0.25", default-features = false, features = ["png"]}
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1", features = ["derive"] }
colored = "2.1"
rfd = "0.14"
csv = "1.3.0"
