[package]
name = "a-bean-sieve"
version = "0.2.0"
edition = "2021"

[dependencies]
eframe =  { version = "0.28", features = ["persistence"] }
egui_extras = { version = "0.28", features = ["svg", "image"] }
image = { version = "0.25", default-features = false, features = ["png"]}
hyper = { version = "1.3", features = ["full"] }
tokio = { version = "1.37", features = ["full"] }
csv = "1.2.1"
serde = { version = "1", features = ["derive"] }
colored = "2.0.0"
hyper-util = { version = "0.1.8", features = ["full"] }
http-body-util = "0.1.2"
rfd = "0.15.0"
serde_json = "1.0.128"
chrono = "0.4.38"
